$Id$
---------------------------------------------------------------------------

Version 0.6 (...)

- Added 'colspacing' variable, allowing control over the column spacing in
  result set output.
- Initial values for variables (i.e., arguments to ".set") can be specified
  in a [settings] section in the configuration file.

---------------------------------------------------------------------------
Version 0.5 (13 November, 2008)

- Added ".about" metacommand.
- Added ".show database" metacommand, to get information about the current
  database and RDBMS software.
- Fixed a small bug with the ConfigurationError exception class, improving
  error messages.
- Better formatting of help output.
- Slightly better error handling.

---------------------------------------------------------------------------
Version 0.4.2 (5 November, 2008)

- Now pre-reqs Grizzled version 0.8.4 or better, to provide decent Oracle
  support. Tested against Oracle XE 10.2 for Linux.

---------------------------------------------------------------------------
Version 0.4.1 (4 November, 2008)

- Unknown "." commands are no longer passed through to the database engine
  by default, resulting in better error messages.
- The "help variables" topic is now "help settings".

---------------------------------------------------------------------------
Version 0.4 (3 November, 2008)

- Now calls grizzled.cmdline.CommandLineParser's die_with_usage() method,
  instead of the deprecated show_usage() method.
- Now supports shell-style variables. See the User's Guide for details.

---------------------------------------------------------------------------
Version 0.3.2 (8 September, 2008)

- Now properly bundles ez_setup.py
- Now supports Gadfly (http://gadfly.sourceforge.net/)

---------------------------------------------------------------------------
Version 0.3.1 (5 August, 2008)

- Fixed bug with --database option introduced in version 0.3