@@ -20727,3 +20727,302 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
 guimgr.recent-documents = [loc('../../../../.sqlcmd/config'),
                            loc('CHANGELOG'),
                            loc('sqlcmd/__init__.py')]
+guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
+                            'windows': [{'name': 'GSwJ5tyh5FBcTHVUpdQCR7Rbba'\
+        'NCtTC2',
+        'size-state': '',
+        'type': 'dock',
+        'view': {'area': 'tall',
+                 'current_pages': [0,
+                                   1],
+                 'notebook_display': 'normal',
+                 'notebook_percent': 0.11044776119402988,
+                 'override_title': None,
+                 'pagelist': [('debug-stack',
+                               'tall',
+                               1,
+                               {}),
+                              ('project',
+                               'tall',
+                               0,
+                               {'tree-state': {'file-sort-method': 'by name',
+        'list-files-first': False,
+        'tree-states': {'deep': {'column-widths': [1.0],
+                                 'expanded-nodes': [(3,)],
+                                 'selected-nodes': [(3,
+        0)],
+                                 'top-node': (0,)}},
+        'tree-style': 'deep'}}),
+                              ('source-assistant',
+                               'tall',
+                               2,
+                               {'docstring-during-complete': False,
+                                'wrap-lines': True}),
+                              ('browser',
+                               'tall',
+                               0,
+                               {}),
+                              ('templates',
+                               'tall',
+                               0,
+                               {})],
+                 'primary_view_state': {'area': 'wide',
+        'current_pages': [3,
+                          0],
+        'notebook_display': 'tabs only',
+        'notebook_percent': 0.30000000000000004,
+        'override_title': None,
+        'pagelist': [('bookmarks',
+                      'wide',
+                      1,
+                      {'tree-state': []}),
+                     ('debug-breakpoints',
+                      'wide',
+                      0,
+                      {}),
+                     ('debug-io',
+                      'wide',
+                      1,
+                      {}),
+                     ('debug-probe',
+                      'wide',
+                      2,
+                      {}),
+                     ('debug-exceptions',
+                      'wide',
+                      0,
+                      {}),
+                     ('debug-modules',
+                      'wide',
+                      1,
+                      {}),
+                     ('python-shell',
+                      'wide',
+                      2,
+                      {'attrib-starts': [],
+                       'first-line': 0,
+                       'folded-linenos': [],
+                       'history': {},
+                       'sel-line': 3,
+                       'sel-line-start': 173,
+                       'selection_end': 177,
+                       'selection_start': 177}),
+                     ('interactive-search',
+                      'wide',
+                      0,
+                      {}),
+                     ('batch-search',
+                      'wide',
+                      0,
+                      {'fScope': {'fFileSetName': u'All Source Files',
+                                  'fLocation': None,
+                                  'fRecursive': True,
+                                  'fType': 'project-files'},
+                       'fSearchSpec': {'fEndPos': None,
+                                       'fIncludeLinenos': True,
+                                       'fInterpretBackslashes': False,
+                                       'fMatchCase': False,
+                                       'fOmitBinary': True,
+                                       'fRegexFlags': 46,
+                                       'fReplaceText': '',
+                                       'fReverse': False,
+                                       'fSearchText': '',
+                                       'fStartPos': 0,
+                                       'fStyle': 'text',
+                                       'fWholeWords': False,
+                                       'fWrap': True},
+                       'fUIOptions': {'fAutoBackground': True,
+                                      'fFilePrefix': 'short-file',
+                                      'fFindAfterReplace': True,
+                                      'fInSelection': False,
+                                      'fIncremental': True,
+                                      'fReplaceOnDisk': False,
+                                      'fShowFirstMatch': False,
+                                      'fShowLineno': True,
+                                      'fShowReplaceWidgets': False},
+                       'replace-entry-expanded': False,
+                       'search-entry-expanded': False}),
+                     ('debug-data',
+                      'wide',
+                      0,
+                      {}),
+                     ('testing',
+                      'wide',
+                      0,
+                      {}),
+                     ('debug-watch',
+                      'wide',
+                      1,
+                      {})],
+        'primary_view_state': {'editor_states': ('horizontal',
+        0.5,
+        {'bookmarks': ([[loc('sqlcmd/__init__.py'),
+                         {'attrib-starts': [],
+                          'first-line': 0,
+                          'folded-linenos': [],
+                          'sel-line': 0,
+                          'sel-line-start': 0,
+                          'selection_end': 0,
+                          'selection_start': 0},
+                         1229532697.314358]],
+                       0),
+         'current-loc': loc('sqlcmd/__init__.py'),
+         'editor-states': {loc('sqlcmd/__init__.py'): {'attrib-starts': [],
+        'first-line': 180,
+        'folded-linenos': [],
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                           loc('../../../../../../home/bmc/ftpparse.py'): {}},
+         'has-focus': False},
+        {'bookmarks': ([(loc('sqlcmd/__init__.py'),
+                         {'attrib-starts': [],
+                          'first-line': 0,
+                          'folded-linenos': [],
+                          'sel-line': 10,
+                          'sel-line-start': 162,
+                          'selection_end': 174,
+                          'selection_start': 174},
+                         1229532686.5953779),
+                        (loc('../../../../../../home/bmc/ftpparse.py'),
+                         {'attrib-starts': [('FTPListDataParser',
+        131),
+        ('FTPListDataParser.parse_line',
+         140)],
+                          'first-line': 120,
+                          'folded-linenos': [],
+                          'sel-line': 150,
+                          'sel-line-start': 5123,
+                          'selection_end': 5181,
+                          'selection_start': 5181},
+                         1229532850.5213799),
+                        (loc('../../../../../../home/bmc/ftpparse.py'),
+                         {'attrib-starts': [('FTPListDataParser',
+        131),
+        ('FTPListDataParser._parse_EPLF',
+         200)],
+                          'first-line': 186,
+                          'folded-linenos': [],
+                          'sel-line': 229,
+                          'sel-line-start': 7554,
+                          'selection_end': 7573,
+                          'selection_start': 7562},
+                         1229532912.379566),
+                        (loc('../../../../../../home/bmc/ftpparse.py'),
+                         {'attrib-starts': [('FTPListDataParser',
+        131),
+        ('FTPListDataParser._parse_unix_style',
+         231)],
+                          'first-line': 272,
+                          'folded-linenos': [],
+                          'sel-line': 315,
+                          'sel-line-start': 11045,
+                          'selection_end': 11080,
+                          'selection_start': 11069},
+                         1229532915.8416469),
+                        (loc('../../../../../../home/bmc/ftpparse.py'),
+                         {'attrib-starts': [('FTPListDataParser',
+        131),
+        ('FTPListDataParser._parse_multinet',
+         347)],
+                          'first-line': 358,
+                          'folded-linenos': [],
+                          'sel-line': 401,
+                          'sel-line-start': 13396,
+                          'selection_end': 13427,
+                          'selection_start': 13416},
+                         1229532966.483237),
+                        (loc('../../../../../../home/bmc/ftpparse.py'),
+                         {'attrib-starts': [('FTPListDataParser',
+        131),
+        ('FTPListDataParser._parse_msdos',
+         412)],
+                          'first-line': 414,
+                          'folded-linenos': [],
+                          'sel-line': 457,
+                          'sel-line-start': 14880,
+                          'selection_end': 14911,
+                          'selection_start': 14900},
+                         1229533003.3503981),
+                        (loc('../../../../../../home/bmc/ftpparse.py'),
+                         {'attrib-starts': [('FTPListDataParser',
+        131),
+        ('FTPListDataParser.parse_line',
+         140)],
+                          'first-line': 112,
+                          'folded-linenos': [],
+                          'sel-line': 155,
+                          'sel-line-start': 5304,
+                          'selection_end': 5327,
+                          'selection_start': 5316},
+                         1229533051.1288869),
+                        (loc('../../../../../../home/bmc/ftpparse.py'),
+                         {'attrib-starts': [('FTPListDataParser',
+        131),
+        ('FTPListDataParser._parse_unix_style',
+         231)],
+                          'first-line': 284,
+                          'folded-linenos': [],
+                          'sel-line': 327,
+                          'sel-line-start': 11362,
+                          'selection_end': 11386,
+                          'selection_start': 11375},
+                         1229533098.595355),
+                        [loc('../../../../../../home/bmc/ftpparse.py'),
+                         {'attrib-starts': [('FTPListDataParser',
+        131),
+        ('FTPListDataParser._parse_unix_style',
+         231)],
+                          'first-line': 284,
+                          'folded-linenos': [],
+                          'sel-line': 327,
+                          'sel-line-start': 11362,
+                          'selection_end': 11386,
+                          'selection_start': 11375},
+                         1229533106.827601]],
+                       8),
+         'current-loc': loc('../../../../../../home/bmc/ftpparse.py'),
+         'editor-states': {loc('sqlcmd/__init__.py'): {'attrib-starts': [],
+        'first-line': 0,
+        'folded-linenos': [],
+        'sel-line': 10,
+        'sel-line-start': 162,
+        'selection_end': 174,
+        'selection_start': 174},
+                           loc('../../../../../../home/bmc/ftpparse.py'): {''\
+        'attrib-starts': [('FTPListDataParser',
+                           131),
+                          ('FTPListDataParser.parse_line',
+                           140)],
+        'first-line': 0,
+        'folded-linenos': [],
+        'sel-line': 152,
+        'sel-line-start': 5268,
+        'selection_end': 5268,
+        'selection_start': 5268}},
+         'has-focus': True}),
+                               'open_files': [u'sqlcmd/__init__.py',
+        u'../../../../../../home/bmc/ftpparse.py']},
+        'split_percents': {0: 0.5},
+        'splits': 2,
+        'tab_location': 'top',
+        'user_data': {}},
+                 'split_percents': {0: 0.5},
+                 'splits': 2,
+                 'tab_location': 'left',
+                 'user_data': {}},
+        'window-alloc': (1680,
+                         22,
+                         1680,
+                         967)}]}
+guimgr.recent-documents = [loc('../../../../../../home/bmc/ftpparse.py'),
+                           loc('sqlcmd/__init__.py')]
+guimgr.visual-state = {loc('unknown:<untitled> #2'): {'attrib-starts': [],
+        'first-line': 0,
+        'folded-linenos': [],
+        'history': {},
+        'sel-line': 3,
+        'sel-line-start': 173,
+        'selection_end': 177,
+        'selection_start': 177}}
